--- a/text-summarization/RUN.ipynb
+++ b/text-summarization/RUN.ipynb
@@ -341,9 +341,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "conda_tensorflow_p36",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda_tensorflow_p36"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -355,7 +355,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
