--- a/text-summarization/RUN-Reddit-TRAIN.ipynb
+++ b/text-summarization/RUN-Reddit-TRAIN.ipynb
@@ -156,13 +156,7 @@
       "79/79 [==============================] - 107s 1s/step - loss: 0.5904 - acc: 0.0618 - val_loss: 1.0700 - val_acc: 0.0241\n",
       "Epoch 61/100\n",
       "79/79 [==============================] - 107s 1s/step - loss: 0.5835 - acc: 0.0630 - val_loss: 1.0701 - val_acc: 0.0225\n",
-      "Epoch 62/100\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 62/100\n",
       "79/79 [==============================] - 106s 1s/step - loss: 0.5767 - acc: 0.0638 - val_loss: 1.0799 - val_acc: 0.0243\n",
       "Epoch 63/100\n",
       "79/79 [==============================] - 106s 1s/step - loss: 0.5697 - acc: 0.0648 - val_loss: 1.0825 - val_acc: 0.0237\n",
@@ -246,7 +240,6 @@
    ],
    "source": [
     "import time\n",
-    "\n",
     "t0 = time.time()\n",
     "%run demo/seq2seq_train.py\n",
     "t1 = time.time()\n",
